--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <main>
         <p>I’m a frontend developer and designer from Lagos, Nigeria.</p>
         <p>Aspiring web developer. </p>
-        <p>I also write articles on my blog, <a href="techbizwire.blogspot.com">techbizwire</a>.</p>
+        <p>I also write articles on my blog, <a href="https://techbizwire.blogspot.com">techbizwire</a>.</p>
         <p>I also aspire to organise and speak at conference worldwide to tell young minds about tech.</p>
         <p></p>
         <details open>
             <summary>Some other things:</summary>
             <ul class="list">
-                <li><a href="https://google.com/udemy">Developer Lear   ning Guide</a>
+                <li><a href="https://google.com/udemy">Developer Learning Guide</a>
                     - A guide for getting started with frontend development. A list of resources and projects to develop your skills.</li>
             </ul>
         </details>
