--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <details open>
             <summary>Some other things:</summary>
             <ul class="list">
-                <li><a href="https://google.com/udemy">Developer Learning Guide</a>
+                <li><a href="https://www.udemy.com">Developer Learning Guide</a>
                     - A guide for getting started with frontend development. A list of resources and projects to develop your skills.</li>
             </ul>
         </details>
